--- a/covers/index.html
+++ b/covers/index.html
@@ -124,8 +124,31 @@ gap: 5px;
 </div>
 </div>
 
-<p><a href="/img/20211212%20-%20AustralOsorno.png"><img src="/img/20211212%20-%20AustralOsorno.png" alt="Austral Osorno" width="100" height="150" /></a> <a href="/img/20210411%20-%20AustralOsorno.png"><img src="/img/20210411%20-%20AustralOsorno.png" alt="Austral Osorno" width="100" height="150" /></a></p>
-<p><a href="/img/20210720%20-%20LUN.png"><img src="/img/20210720%20-%20LUN.png" alt="Las Últimas Noticias" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20211212%20-%20AustralOsorno.png"> 
+  </div>
+  <div>
+    <img src="/img/20210411%20-%20AustralOsorno.png"> 
+  </div>
+  <div>
+    <img src="/img/20210720%20-%20LUN.png">
+</div>
+</div>
+
+
+<div class="parent">
+<div>
+    <img src="/img/20230504%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230508%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/white.png">
+</div>
+</div>
+
 
 <p><a href="/img/20230504%20-%20La%20Segunda.png"><img src="/img/20230504%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230508%20-%20La%20Segunda.png"><img src="/img/20230508%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
