--- a/covers/index.html
+++ b/covers/index.html
@@ -136,7 +136,6 @@ gap: 5px;
 </div>
 </div>
 
-
 <div class="parent">
 <div>
     <img src="/img/20230504%20-%20La%20Segunda.png"> 
@@ -149,12 +148,32 @@ gap: 5px;
 </div>
 </div>
 
+<div class="parent">
+<div>
+    <img src="/img/20230413%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230410%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230420%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20230504%20-%20La%20Segunda.png"><img src="/img/20230504%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230508%20-%20La%20Segunda.png"><img src="/img/20230508%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
-<p><a href="/img/20230413%20-%20La%20Segunda.png"><img src="/img/20230413%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230410%20-%20La%20Segunda.png"><img src="/img/20230410%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230420%20-%20La%20Segunda.png"><img src="/img/20230420%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20230313%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230223%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230207%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20230313%20-%20La%20Segunda.png"><img src="/img/20230313%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230223%20-%20La%20Segunda.png"><img src="/img/20230223%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20230207%20-%20La%20Segunda.png"><img src="/img/20230207%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 
 <p><a href="/img/20221226%20-%20La%20Segunda.png"><img src="/img/20221226%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20221220%20-%20La%20Segunda.png"><img src="/img/20221220%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220811%20-%20La%20Segunda.png"><img src="/img/20220811%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
