--- a/covers/index.html
+++ b/covers/index.html
@@ -174,11 +174,42 @@ gap: 5px;
 </div>
 
 
+<div class="parent">
+<div>
+    <img src="/img/20221226%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20221220%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20220811%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20221226%20-%20La%20Segunda.png"><img src="/img/20221226%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20221220%20-%20La%20Segunda.png"><img src="/img/20221220%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220811%20-%20La%20Segunda.png"><img src="/img/20220811%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20220722%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20220719%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210419%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20220722%20-%20La%20Segunda.png"><img src="/img/20220722%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220719%20-%20La%20Segunda.png"><img src="/img/20220719%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a>
-<a href="/img/20210419%20-%20La%20Segunda.png"><img src="/img/20210419%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20220711%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20220418%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20220618%20-%20La%20Segunda.png">
+</div>
+</div>
+
 
 <p><a href="/img/20220711%20-%20La%20Segunda.png"><img src="/img/20220711%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220418%20-%20La%20Segunda.png"><img src="/img/20220418%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220618%20-%20La%20Segunda.png"><img src="/img/20220618%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
