--- a/covers/index.html
+++ b/covers/index.html
@@ -211,9 +211,19 @@ gap: 5px;
 </div>
 
 
-<p><a href="/img/20220711%20-%20La%20Segunda.png"><img src="/img/20220711%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220418%20-%20La%20Segunda.png"><img src="/img/20220418%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220618%20-%20La%20Segunda.png"><img src="/img/20220618%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20220411%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20220406%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20211213%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20220411%20-%20La%20Segunda.png"><img src="/img/20220411%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20220406%20-%20La%20Segunda.png"><img src="/img/20220406%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211213%20-%20La%20Segunda.png"><img src="/img/20211213%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
 
 <p><a href="/img/20211130%20-%20La%20Segunda.png"><img src="/img/20211130%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211124%20-%20La%20Segunda.png"><img src="/img/20211124%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210719%20-%20La%20Segunda.png"><img src="/img/20210719%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
