--- a/covers/index.html
+++ b/covers/index.html
@@ -224,10 +224,32 @@ gap: 5px;
 </div>
 
 
+<div class="parent">
+<div>
+    <img src="/img/20211130%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="img/20211124%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210719%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20211130%20-%20La%20Segunda.png"><img src="/img/20211130%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211124%20-%20La%20Segunda.png"><img src="/img/20211124%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210719%20-%20La%20Segunda.png"><img src="/img/20210719%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
-<p><a href="/img/20210806%20-%20La%20Segunda.png"><img src="/img/20210806%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211019%20-%20La%20Segunda.png"><img src="/img/20211019%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211004%20-%20La%20Segunda.png"><img src="/img/20211004%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20210806%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20211019%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20211004%20-%20La%20Segunda.png">
+</div>
+</div>
+
+
 
 <p><a href="/img/20210909%20-%20La%20Segunda.png"><img src="/img/20210909%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210824%20-%20La%20Segunda.png"><img src="/img/20210824%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210922%20-%20La%20Segunda.png"><img src="/img/20210922%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
