--- a/covers/index.html
+++ b/covers/index.html
@@ -250,8 +250,20 @@ gap: 5px;
 </div>
 
 
+<div class="parent">
+<div>
+    <img src="/img/20210909%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210824%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210922%20-%20La%20Segunda.png">
+</div>
+</div>
 
-<p><a href="/img/20210909%20-%20La%20Segunda.png"><img src="/img/20210909%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210824%20-%20La%20Segunda.png"><img src="/img/20210824%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210922%20-%20La%20Segunda.png"><img src="/img/20210922%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+
+
 
 <p><a href="/img/20210924%20-%20La%20Segunda.png"><img src="/img/20210924%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210927%20-%20La%20Segunda.png"><img src="/img/20210927%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210905%20-%20La%20Segunda.png"><img src="/img/20210905%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
 
