--- a/covers/index.html
+++ b/covers/index.html
@@ -263,24 +263,79 @@ gap: 5px;
 </div>
 
 
+<div class="parent">
+<div>
+    <img src="/img/20210924%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210927%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210905%20-%20La%20Segunda.png">
+</div>
+</div>
+
+<div class="parent">
+<div>
+    <img src="/img/20210301%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20211203%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210427%20-%20La%20Segunda.png">
+</div>
+</div>
+
+<div class="parent">
+<div>
+    <img src="/img/20200323%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20210808%20-%20MercurioValpo.png"> 
+  </div>
+  <div>
+    <img src="/img/20210808%20-%20MercurioValpo.png">
+</div>
+</div>
+
+<div class="parent">
+<div>
+    <img src="/img/20230208%20-%20El%20Mercurio.png"> 
+  </div>
+  <div>
+    <img src="/img/20210225%20-%20El%20Mercurio.png"> 
+  </div>
+  <div>
+    <img src="/img/20210808%20-%20MercurioValpo.png">
+</div>
+</div>
 
 
-<p><a href="/img/20210924%20-%20La%20Segunda.png"><img src="/img/20210924%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210927%20-%20La%20Segunda.png"><img src="/img/20210927%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210905%20-%20La%20Segunda.png"><img src="/img/20210905%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20210411%20-%20El_Sur.png"> 
+  </div>
+  <div>
+    <img src="/img/20160522%20-%20El_Centro.png"> 
+  </div>
+  <div>
+    <img src="/img/20160522%20-%20El_Centro.png">
+</div>
+</div>
 
-<p><a href="/img/20210301%20-%20La%20Segunda.png"><img src="/img/20210301%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20211203%20-%20La%20Segunda.png"><img src="/img/20211203%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> <a href="/img/20210427%20-%20La%20Segunda.png"><img src="/img/20210427%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a></p>
+<div class="parent">
+<div>
+    <img src="/img/20210411%20-%20Estrella_Iquique.png"> 
+  </div>
+  <div>
+    <img src="/img/20211215%20-%20La_Discusion.png"> 
+  </div>
+  <div>
+    <img src="/img/20211215%20-%20La_Discusion.png">
+</div>
+</div>
 
-<p><a href="/img/20200323%20-%20La%20Segunda.png"><img src="/img/20200323%20-%20La%20Segunda.png" alt="La Segunda" width="100" height="150" /></a> </p>
-<p><a href="/img/20210808%20-%20MercurioValpo.png"><img src="/img/20210808%20-%20MercurioValpo.png" alt="El Mercurio Valparaíso" width="100" height="150" /></a></p>
-
-<p><a href="/img/20230208%20-%20El%%20Mercurio.png"><img src="/img/20230208%20-%20El%20Mercurio.png" alt="El Mercurio" width="100" height="150" /></a> <a href="/img/20210225%20-%20El%20Mercurio.png"><img src="/img/20210225%20-%20El%20Mercurio.png" alt="El Mercurio" width="100" height="150" /></a> </p>
-
-<p><a href="/img/20210411%20-%20El_Sur.png"><img src="/img/20210411%20-%20El_Sur.png" alt="El Sur" width="100" height="150" /></a></p>
-
-<p><a href="https://kennethbunker.github.io/img/20160522%20-%20El_Centro.png"><img src="/img/20160522%20-%20El_Centro.png" alt="El Centro" width="100" height="150" /></a></p>
-
-<p><a href="/img/20210411%20-%20Estrella_Iquique.png"><img src="/img/20210411%20-%20Estrella_Iquique.png" alt="Estrella de Iquique" width="100" height="150" /></a></p>
-
-<p><a href="/img/20211215%20-%20La_Discusion.png"><img src="/img/20211215%20-%20La_Discusion.png" alt="La Discusión de Chillán" width="100" height="150" /></a></p>
 
 
         </div><div id="footer" class="mb-5">
