--- a/covers/index.html
+++ b/covers/index.html
@@ -96,7 +96,7 @@ gap: 5px;
     <img src="/img/white.png">
 </div>
 <div>
-    <img src="/img/white.png">
+    <img src="/img/20230504%20-%20La%20Segunda.png">
 </div>
 </div>
 
@@ -120,7 +120,7 @@ gap: 5px;
     <img src="/img/20210411%20-%20MercurioValpo.png"> 
   </div>
   <div>
-    <img src="/img/white.png">
+    <img src="/img/20230504%20-%20La%20Segunda.png">
 </div>
 </div>
 
@@ -144,7 +144,7 @@ gap: 5px;
     <img src="/img/20230508%20-%20La%20Segunda.png"> 
   </div>
   <div>
-    <img src="/img/white.png">
+    <img src="/img/20210301%20-%20La%20Segunda.png">
 </div>
 </div>
 
