--- a/covers/index.html
+++ b/covers/index.html
@@ -93,7 +93,7 @@ gap: 5px;
     <img src="/img/20220905%20-%20LUN.png">
 </div>
 <div>
-    <img src="/img/white.png">
+    <img src="/img/20210301%20-%20La%20Segunda.png">
 </div>
 <div>
     <img src="/img/20230504%20-%20La%20Segunda.png">
