--- a/covers/index.html
+++ b/covers/index.html
@@ -93,10 +93,10 @@ gap: 5px;
     <img src="/img/20220905%20-%20LUN.png">
 </div>
 <div>
-    <img src="/img/20210301%20-%20La%20Segunda.png">
+    <img src="/img/20210720%20-%20LUN.png">
 </div>
 <div>
-    <img src="/img/20230504%20-%20La%20Segunda.png">
+    <img src="/img/20210719%20-%20LUN.png">
 </div>
 </div>
 
