--- a/columns/index.html
+++ b/columns/index.html
@@ -74,6 +74,9 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20230607 - Noche y día</li>
+<li>20230602 - Otro país</li>
+<li>20230525 - Todo lo contrario</li>
 <li>20230509 - Retribución moral</li>
 <li>20230508 - Victoria histórica</li>
 <li>20230506 - Legitimas dudas</li>
@@ -339,6 +342,8 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+<li>20230602 - La reforma tributaria y la lista de supermercado</li>
+<li>20230526 - El plan piloto</li>
 <li>20230519 - El colapso de las Isapres</li>
 <li>20230512 - La Constitución de Kast o la Constitución de Pinochet</li>
 <li>20230505 - 7M: Una elección sobre cualquier otra cosa que lo constitucional</li>
