--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am a political consultant, an academic, and a columnist. I am a professor at the Economy and Government Department at San Sebastián University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide:. I regularly participate as a current affairs television, radio and newspaper commentator.</p>
+<p>I am a political an academic, a consultant and a columnist. I am a professor at the Economy and Government Department at San Sebastián University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide:. I regularly participate as a current affairs television, radio and newspaper commentator.</p>
 <hr>
 <p>📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
 <hr>
