--- a/index.html
+++ b/index.html
@@ -82,32 +82,32 @@
 <p>My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 <p>More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">advanced democracies</a>.</p>
 <hr>
-<p>My forthcoming book (with Jorge Heine) is called:</p>
-<p>💎 <strong>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</strong></p>
+<p class="shifted">My forthcoming book (with Jorge Heine) is called:</p>
+<p class="shifted">💎 <strong>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</strong></p>
 <hr>
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
-<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. (Forthcoming). <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
+<p class="shifted">2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. (Forthcoming). <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
-<p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
+<p class="shifted">2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
 
-<p>2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
+<p class="shifted">2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
 
-<p>2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
+<p class="shifted">2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
 
-<p>2019. “Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America.” <em>Revista de Estudios Políticos</em> 186(4): 171-199. <a href="https://doi.org/10.18042/cepc/rep.186.06">doi</a>.</p>
+<p class="shifted">2019. “Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America.” <em>Revista de Estudios Políticos</em> 186(4): 171-199. <a href="https://doi.org/10.18042/cepc/rep.186.06">doi</a>.</p>
 
-<p>2019. “Cultural Backlash: Trump, Brexit, and authoritarian populism, by Pippa Norris and Ronald Inglehart.” <em>Democratization</em> 26(7): 1323-1325. <a href="https://doi.org/%2010.1080/13510347.2019.1601705">doi</a>.</p>
+<p class="shifted">2019. “Cultural Backlash: Trump, Brexit, and authoritarian populism, by Pippa Norris and Ronald Inglehart.” <em>Democratization</em> 26(7): 1323-1325. <a href="https://doi.org/%2010.1080/13510347.2019.1601705">doi</a>.</p>
 
-<p>2019. “Voter Equalization and Turnout Bias After Electoral Reform: Evidence from Chile’s Voluntary Voting Law.” <em>Latin American Politics and Society</em> 61(4): 23-46. <a href="https://doi.org/10.1017/lap.2019.23">doi</a>. (with Daniel Brieba).</p>
+<p class="shifted">2019. “Voter Equalization and Turnout Bias After Electoral Reform: Evidence from Chile’s Voluntary Voting Law.” <em>Latin American Politics and Society</em> 61(4): 23-46. <a href="https://doi.org/10.1017/lap.2019.23">doi</a>. (with Daniel Brieba).</p>
 
-<p>2019. “Richard Nadeau, Éric Bélanger, Michael S. Lewis-Beck, Mathieu Turgeon and François Gélineau, Latin American Elections: Choice and Change.” <em>Journal of Latin American Studies</em> 51(3): 721-723. <a href="https://doi.org/10.1017/S0022216X19000798">doi</a>.</p>
+<p class="shifted">2019. “Richard Nadeau, Éric Bélanger, Michael S. Lewis-Beck, Mathieu Turgeon and François Gélineau, Latin American Elections: Choice and Change.” <em>Journal of Latin American Studies</em> 51(3): 721-723. <a href="https://doi.org/10.1017/S0022216X19000798">doi</a>.</p>
 
-<p>2019. “Party Systems in Latin America: Institutionalization, Decay, and Collapse, by Scott Mainwaring (Eds.).” <em>Democratization</em> 26(3): 554-555. <a href="https://doi.org/10.1007/s11127-018-0613-6">doi</a>.</p>
+<p class="shifted">2019. “Party Systems in Latin America: Institutionalization, Decay, and Collapse, by Scott Mainwaring (Eds.).” <em>Democratization</em> 26(3): 554-555. <a href="https://doi.org/10.1007/s11127-018-0613-6">doi</a>.</p>
 
-<p>2019. “Matthew S. Shugart and Rein Taagepera: Votes from seats: Logical models of electoral systems.” <em>Public Choice</em> 178(1-2): 311-313. <a href="https://doi.org/10.1080/13510347.2018.1536123">doi</a>.</p>
+<p class="shifted">2019. “Matthew S. Shugart and Rein Taagepera: Votes from seats: Logical models of electoral systems.” <em>Public Choice</em> 178(1-2): 311-313. <a href="https://doi.org/10.1080/13510347.2018.1536123">doi</a>.</p>
 
-<p>2018. “The 2017 Elections and the Fragmentation of the Party System in Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em> 9(2): 204-229. <a href="http://10.0.30.90/RCHDYCP-V9N2-ART1823">doi</a>.</p>
+<p class="shifted">2018. “The 2017 Elections and the Fragmentation of the Party System in Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em> 9(2): 204-229. <a href="http://10.0.30.90/RCHDYCP-V9N2-ART1823">doi</a>.</p>
 
 </ul>
 <p>Here are some working papers (please contact me for citation instructions):</p>
