--- a/covers/index.html
+++ b/covers/index.html
@@ -229,7 +229,7 @@ gap: 5px;
     <img src="/img/20211130%20-%20La%20Segunda.png"> 
   </div>
   <div>
-    <img src="img/20211124%20-%20La%20Segunda.png"> 
+    <img src="/img/20211124%20-%20La%20Segunda.png"> 
   </div>
   <div>
     <img src="/img/20210719%20-%20La%20Segunda.png">
