--- a/covers/index.html
+++ b/covers/index.html
@@ -120,7 +120,7 @@ gap: 5px;
     <img src="/img/20210411%20-%20MercurioValpo.png"> 
   </div>
   <div>
-    <img src="/img/20230504%20-%20La%20Segunda.png">
+    <img src="/img/20211212%20-%20MercurioValpo.png">
 </div>
 </div>
 
@@ -132,7 +132,7 @@ gap: 5px;
     <img src="/img/20210411%20-%20AustralOsorno.png"> 
   </div>
   <div>
-    <img src="/img/20210720%20-%20LUN.png">
+    <img src="/img/20211212%20-%20AustralOsorno.png">
 </div>
 </div>
 
