--- a/columns/index.html
+++ b/columns/index.html
@@ -70,7 +70,7 @@
 <p><em>Below are some of my columns published in <a href="https://en.wikipedia.org/wiki/Las_%C3%9Altimas_Noticias">Las Últimas Noticias</a>, <a href="https://www.ex-ante.cl/">Ex-Ante</a>, <a href="https://es.wikipedia.org/wiki/Teletrece">T13</a>, and <a href="https://en.wikipedia.org/wiki/La_Tercera">La Tercera</a>. For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em></p>
 <hr>
 
-<a href="https://wsj.com">Las Últimas Noticias</a> / <a href="https://time.com">Ex-Ante</a> / <a href="https://www.economist.com">La Tercera</a> / <a href="https://americaeconomia.com">T13</a>  / <a href="https://lemonde.com">El Mostrador</a>
+<a href="https://www.lun.com">Las Últimas Noticias</a> / <a href="https://www.ex-ante.cl">Ex-Ante</a> / <a href="https://www.latercera.cl">La Tercera</a> / <a href="https://t13.cl">T13</a>  / <a href="https://elmostrador.cl">El Mostrador</a>
 
 <hr>
 <ul>
