--- a/interviews/index.html
+++ b/interviews/index.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Press</title>
+    <title>Interviews - Kenneth Bunker</title>
     <meta name="description" content="PhD Candidate in Political Science, University of Zurich">
     <meta name="author" content='Magdalena Breyer'>
 
