--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am a political an academic, a consultant and a columnist. I am a professor at the Economics and Government Department at San Sebastián University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I regularly participate as a current affairs television, radio and newspaper commentator.</p>
+<p>I am a an academic, a consultant and a columnist. I am a professor at the Economics and Government Department at San Sebastián University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I regularly participate as a current affairs television, radio and newspaper commentator.</p>
 <hr>
 <p class="shifted">📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
 <hr>
@@ -82,7 +82,7 @@
 <p>My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 <p>More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">advanced democracies</a>.</p>
 <hr>
-<p class="shifted">My forthcoming book (with Jorge Heine) is called:</p>
+<p>My forthcoming book (with Jorge Heine) is called:</p>
 <p class="shifted">💎 <strong>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</strong></p>
 <hr>
 <p>You can find a short list of my most recent publications below:</p>
