--- a/covers/index.html
+++ b/covers/index.html
@@ -13,7 +13,7 @@
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Covers</title>
+    <title>Covers - Kenneth Bunker</title>
     <meta name="description" content="Academic, Consultant, Columnist">
     <meta name="author" content='Kenneth Bunker'>
 
