--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
     margin-left: 30px;
 }
  </style>     
-    
+
+<head>
+<meta property="og:title" content="Kenneth Bunker" />
+<meta property="og:image" content="https://kennethbunker.github.io/me1.png" />
+<meta property="og:description" content="Kenneth Bunker " />
+<meta property="og:site_name" content="Kenneth Bunker: Personal Website." />
+</head>
+
 </head>
 
     <body><div class="container mt-5">
