--- a/columns/index.html
+++ b/columns/index.html
@@ -346,6 +346,7 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+<li>20230616 - El deterioro generalizado: todo lo prometido es deuda</li>
 <li>20230609 - Las grandes ideas son importantes, pero sin gestión no tienen valor</li>
 <li>20230602 - La reforma tributaria y la lista de supermercado</li>
 <li>20230526 - El plan piloto</li>
