--- a/interviews/index.html
+++ b/interviews/index.html
@@ -69,6 +69,8 @@
 <em>For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em>
 <hr>
 <ul>
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-el-ministro-de-hacienda-mario-marcel-se-esta-contagiando-con-este-espiritu-frenteamplista/">Kenneth Bunker: “El ministro de Hacienda Mario Marcel se está contagiando con este espíritu frenteamplista”.</a> 21 June, 2023.
+</li>
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-discurso-del-presidente-el-optimismo-de-boric-contrasta-con-un-pais-que-esta-en-crisis/">Kenneth Bunker y discurso del Presidente: “El optimismo de Boric contrasta con un país que está en crisis”.</a> 1 June, 2023.
 </li>
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-la-victoria-de-kast-va-a-tener-repercusiones-profundas/">Kenneth Bunker: “La victoria de Kast va a tener repercusiones profundas”.</a> 8 May, 2023.
