--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
                         Columns
-                    </a>              
+                    </a>     
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/interviews">
+                        Interviews
+                    </a>            
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
