--- a/columns/index.html
+++ b/columns/index.html
@@ -77,6 +77,7 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20230624 - Superioridad moral</li>
 <li>20230614 - Construir y proponer</li>
 <li>20230607 - Noche y día</li>
 <li>20230602 - Otro país</li>
@@ -346,6 +347,7 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+<li>20230624 - La punta del iceberg</li>
 <li>20230616 - El deterioro generalizado: todo lo prometido es deuda</li>
 <li>20230609 - Las grandes ideas son importantes, pero sin gestión no tienen valor</li>
 <li>20230602 - La reforma tributaria y la lista de supermercado</li>
