--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
 <hr>
 <p class="shifted">📍 <a href="https://kennethbunker.github.io/press"><strong>Click here to see a collection of my comments in the international press!</strong> (TIME, The Economist, The Guardian, BBC, Le Monde, Deutsche Welle, The Wall Street Journal, Forbes, El País, CNN, Bloomberg, Les Echoes, De Tijd, Nasdaq, Expansión, Il Giornale ...)</a>.📍</p>
 <hr>
-<p>I received my PhD in political science from The London School of Economics. I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan and University of Bergamo. I am also a Researcher at Universidad Diego Portales. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
-<p>My research has mainly focused on the interaction between electoral systems and party systems. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
-<p>More recently, I have focused on electoral forecasting across the world. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">advanced democracies</a>.</p>
+<p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
+
+<p>I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan and University of Bergamo. I was also the founding director of the Electoral Program at Universidad Central.</p>
+
+<p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">advanced democracies</a>.</p>
+
+<p>In addition to my main post, I am also a adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
+
 <hr>
 <p>My forthcoming book (with Jorge Heine) is called:</p>
 <p class="shifted">💎 <strong>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</strong></p>
