--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
 <p>I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan and University of Bergamo. I was also the founding director of the Electoral Program at Universidad Central.</p>
 
-<p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">here</a>. The TSM has been tested in <a href="https://www.researchgate.net/publication/334836295_A_two-stage_model_to_forecast_elections_in_developing_democracies">new</a> and <a href="https://www.researchgate.net/publication/336312679_Forecasting_elections_in_Italy">advanced democracies</a>.</p>
+<p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
-<p>In addition to my main post, I am also a adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
+<p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
 
 <hr>
 <p>My forthcoming book (with Jorge Heine) is called:</p>
