--- a/prensa/index.html
+++ b/prensa/index.html
@@ -73,6 +73,8 @@
 <hr>
 <ul>
 
+<li><strong>Canal 13</strong>. <a href="https://www.litoralpress.cl/sitio/RadioTV_Detalles.cshtml?LPKey=AKSMZKGAZP2KFQFLEHGVHLJ45N5CZJBSEL27JJGUEHWNSPGWCSIQ">La compleja hoja de ruta del Gobierno tras una semana negra.</a> 26 June, 2023.
+</li>
 <li><strong>T13</strong>. <a href="https://www.t13.cl/noticia/politica/ex-ante/max-colodro-debacle-revolucion-democratica-por-platas-publicas-esta-crisis-mas-23-6-2023
 ">Max Colodro y “debacle” en Revolución Democrática por platas públicas: “Esta es la crisis más grave del Gobierno”.</a> 22 June, 2023.
 </li>
