--- a/columns/index.html
+++ b/columns/index.html
@@ -347,6 +347,8 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
+
+<li>20230701 - Las manos al fuego</li>
 <li>20230624 - La punta del iceberg</li>
 <li>20230616 - El deterioro generalizado: todo lo prometido es deuda</li>
 <li>20230609 - Las grandes ideas son importantes, pero sin gestión no tienen valor</li>
