--- a/columns/index.html
+++ b/columns/index.html
@@ -77,6 +77,8 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20230707 - La mancha</li>
+<li>20230705 - El escándalo</li>
 <li>20230624 - Superioridad moral</li>
 <li>20230614 - Construir y proponer</li>
 <li>20230607 - Noche y día</li>
@@ -348,6 +350,7 @@
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
 
+<li>20230708 - El castillo de arena</li>
 <li>20230701 - Las manos al fuego</li>
 <li>20230624 - La punta del iceberg</li>
 <li>20230616 - El deterioro generalizado: todo lo prometido es deuda</li>
