--- a/covers/index.html
+++ b/covers/index.html
@@ -139,6 +139,19 @@ gap: 5px;
 
 <div class="parent">
 <div>
+    <img src="/img/20230718%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230718%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20230718%20-%20La%20Segunda.png">
+</div>
+</div>
+
+
+<div class="parent">
+<div>
     <img src="/img/20230504%20-%20La%20Segunda.png"> 
   </div>
   <div>
