--- a/columns/index.html
+++ b/columns/index.html
@@ -77,6 +77,10 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20230802 - El borrador</li>
+<li>20230728 - El retroceso</li>
+<li>20230721 - Dos posibilidades</li>
+<li>20230713 - Politicamente correcto</li>
 <li>20230707 - La mancha</li>
 <li>20230705 - El escándalo</li>
 <li>20230624 - Superioridad moral</li>
@@ -350,6 +354,9 @@
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
 
+<li>20230708 - El legado</li>
+<li>20230708 - Incompetencia política y el comodín de los cincuenta años</li>
+<li>20230708 - La división es peor que la derrota</li>
 <li>20230708 - El castillo de arena</li>
 <li>20230701 - Las manos al fuego</li>
 <li>20230624 - La punta del iceberg</li>
