--- a/interviews/index.html
+++ b/interviews/index.html
@@ -69,6 +69,11 @@
 <em>For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em>
 <hr>
 <ul>
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-el-gobierno-intenta-tomar-un-poco-de-aire-con-este-pacto-fiscal/">Kenneth Bunker: “El Gobierno intenta tomar un poco de aire con este pacto fiscal”.</a> 2 August, 2023.
+</li>
+<li><strong>Emol TV</strong>. <a href="https://tv.emol.com/detail/20230731122606646/agenda-mirada-politica-junto-a-kenneth-bunker-y-benjamin-blanco
+">Agenda Mirada Política junto a Kenneth Bunker y Benjamín Blanco.</a> 2 August, 2023.
+</li>
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-el-ministro-de-hacienda-mario-marcel-se-esta-contagiando-con-este-espiritu-frenteamplista/">Kenneth Bunker: “El ministro de Hacienda Mario Marcel se está contagiando con este espíritu frenteamplista”.</a> 21 June, 2023.
 </li>
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-discurso-del-presidente-el-optimismo-de-boric-contrasta-con-un-pais-que-esta-en-crisis/">Kenneth Bunker y discurso del Presidente: “El optimismo de Boric contrasta con un país que está en crisis”.</a> 1 June, 2023.
