--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an academic at the Economics Department at San Sebastián University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I am also a regular current affairs television, radio and newspaper commentator.</p>
+<p>I am an academic, a consultant and a columnist. I am professor at the Economics Department at San Sebastian University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I am also a regular current affairs television, radio and newspaper commentator.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
@@ -93,6 +93,8 @@
 <p>I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan and University of Bergamo. I was also the founding director of the Electoral Program at Universidad Central.</p>
 
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
+
+I won the WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.
 
 <p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
 
