--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
-I won the WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.
+<p>I won the WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.</p>
 
 <p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
 
