--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
-<p>I won the WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.</p>
+<p>I won the 2023 WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.</p>
 
 <p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
 
@@ -104,7 +104,7 @@
 <hr>
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
-<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. (Forthcoming). <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
+<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
 <p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
 
