--- a/columns/index.html
+++ b/columns/index.html
@@ -354,9 +354,10 @@
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
 
-<li>20230708 - El legado</li>
-<li>20230708 - Incompetencia política y el comodín de los cincuenta años</li>
-<li>20230708 - La división es peor que la derrota</li>
+<li>20230804 - Realismo con renuncia</li>
+<li>20230729 - El legado</li>
+<li>20230722 - Incompetencia política y el comodín de los cincuenta años</li>
+<li>20230715 - La división es peor que la derrota</li>
 <li>20230708 - El castillo de arena</li>
 <li>20230701 - Las manos al fuego</li>
 <li>20230624 - La punta del iceberg</li>
