--- a/columns/index.html
+++ b/columns/index.html
@@ -77,6 +77,7 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20230817 - Un leve ajuste</li>
 <li>20230802 - El borrador</li>
 <li>20230728 - El retroceso</li>
 <li>20230721 - Dos posibilidades</li>
