--- a/columns/index.html
+++ b/columns/index.html
@@ -10,6 +10,36 @@
   gtag('config', 'G-XHPPDNKH57');
 </script>
 
+<style>
+div
+{
+    text-align: center;
+    font-size: 30px;
+    color: white;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+    width:30%;
+}
+.one
+{
+    background-color:limegreen;    
+    float: left;  
+}
+.two
+{
+    background-color:orange;
+    float: left;
+}
+.three
+{
+    background-color: hotpink;
+    float: left;
+}
+</style>
+
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -65,7 +95,8 @@
 <div id="content">
 <div class="container">
 
-<h2 id="columns">Columns</h2>
+        <div class="one">
+        <h2 id="columns">Columns</h2>
 <hr>
 <p><em>Below are some of my columns published in <a href="https://en.wikipedia.org/wiki/Las_%C3%9Altimas_Noticias">Las Últimas Noticias</a>, <a href="https://www.ex-ante.cl/">Ex-Ante</a>, <a href="https://es.wikipedia.org/wiki/Teletrece">T13</a>, and <a href="https://en.wikipedia.org/wiki/La_Tercera">La Tercera</a>. For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em></p>
 <hr>
@@ -349,8 +380,8 @@
 <li>20180106 - El éxodo de Mariana</li>
 <li>20180102 - Los tres gabinetes de Piñera</li>
 </ul>
-
-
+</div>
+<div class="two">
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
@@ -491,7 +522,8 @@
 <li>20210124 - Rincón versus Undurraga y el declive de la DC</li>
 </ul>
 
-
+</div>
+        <div class="three">
 <h2 id="t13-2014-2016-">T13 (2014 - 2016)</h2>
 <p><a href="https://www.t13.cl"><em>T13</em></a></p>
 <ul>
@@ -630,8 +662,7 @@
 <li>20080903 - Los privilegios de los políticos</li>
 <li>20070221 - Participación ciudadana y calidad de las políticas sociales</li>
 </ul>
-
-
+</div>
 <h2 id="others-selected-english-">Others (selected, english)</h2>
 <ul>
 <li>20160520 - HuffPost. <a href="https://www.huffingtonpost.co.uk/kenneth-bunker/how-the-major-parties-wil_b_10044036.html">How the Major Parties Will Face the EU</a>
