--- a/columns/index.html
+++ b/columns/index.html
@@ -28,8 +28,8 @@
     sidebar1 {
         background-color: #999;
         min-height:350px;
-        margin-right: 690px;
-        float:left;
+        margin-right: 20px;
+        float:right;
         width:200px;
     }
 
