--- a/columns/index.html
+++ b/columns/index.html
@@ -29,7 +29,7 @@
         background-color: #999;
         min-height:350px;
         float:right;
-        width:200px;
+        width:20%;
     }
 
  </style>       
