--- a/interviews/index.html
+++ b/interviews/index.html
@@ -69,7 +69,7 @@
 <em>For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>. To see some of my printed press front page appearances, click <a href="https://kennethbunker.github.io/covers">here</a>.</em>
 <hr>
 <ul>
-<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-cambio-de-gabinete-es-un-tremendo-espaldarazo-de-boric-al-partido-comunista/">Latorre renuncia y adelanta elecciones tras "merma" de RD en el gabinete.</a> 17 August, 2023.
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-cambio-de-gabinete-es-un-tremendo-espaldarazo-de-boric-al-partido-comunista/">Kenneth Bunker y cambio de gabinete: “Es un tremendo espaldarazo de Boric al Partido Comunista”.</a> 17 August, 2023.
 </li>
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-el-gobierno-intenta-tomar-un-poco-de-aire-con-este-pacto-fiscal/">Kenneth Bunker: “El Gobierno intenta tomar un poco de aire con este pacto fiscal”.</a> 2 August, 2023.
 </li>
