--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <p>I won the 2023 WAPOR/RLOP <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085234162747490305/">Braun Prize</a> for the application of the TSM in two-horse races.</p>
 
-<p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a>.</p>
+<p>In addition to my main post, I am also an adjunct researcher at Universidad Diego Portales as well as a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://kennethbunker.github.io/cv.pdf">CV</a>.</p>
 
 <hr>
 <p>My forthcoming book (with Jorge Heine) is called:</p>
