--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am professor at the Economics Department at San Sebastian University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I am also a regular current affairs television, radio and newspaper commentator.</p>
+<p>I am an academic, a consultant and a columnist. I work at the Economics Department at San Sebastian University and contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I am also a regular current affairs television, radio and newspaper commentator.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
@@ -90,7 +90,7 @@
 <hr>
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
-<p>I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan and University of Bergamo. I was also the founding director of the Electoral Program at Universidad Central.</p>
+<p>I have been an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan and University of Bergamo. I am also the founding director of the Electoral Program at Universidad Central.</p>
 
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
@@ -104,13 +104,16 @@
 <hr>
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
-<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
-<p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
+<p>2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.” <em>Party Politics</em>. (with Gabriel Negretto).
+
+<p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
 <p>2021. “The age cleavage: Cultural backlash in Chile” <em>América Latina Hoy</em> 87: 1-26. <a href="https://doi.org/10.14201/alh">doi</a>.</p>
 
 <p>2021. “A two-stage model to forecast elections in new democracies” <em>International Journal of Forecasting</em> 36(4): 1407-1419. <a href="https://doi.org/10.1016/j.ijforecast.2020.02.004">doi</a>.</p>
+
+<p>2021. “Coalitional presidentialism in comparative perspective: Minority presidents in multiparty systems, by Paul Chaisty, Nic Cheeseman, and Timothy J. Power.” <em>Party Politics</em>. <a href="https://doi.org/10.1177/1354068820984270">doi</a>.</p>
 
 <p>2019. “Why do parties cooperate in presidentialism? Electoral and government coalition formation in Latin America.” <em>Revista de Estudios Políticos</em> 186(4): 171-199. <a href="https://doi.org/10.18042/cepc/rep.186.06">doi</a>.</p>
 
