--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, a consultant and a columnist. I am an academic at the Economics Department and director of the Democracy and Government Lab at San Sebastian University. I also contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide. I am a regular current affairs television, radio and newspaper commentator.</p>
+<p>I am an academic, a consultant and a columnist. I am an academic at the Economics Department and director of the Democracy and Government Lab at San Sebastian University. I also contribute to two organizations that provide discrete, reliable solutions to investors, stakeholders and politicians worldwide, and I am a regular current affairs television, radio and newspaper commentator.</p>
 
 <p>This is my <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">Google Scholar</a> profile.</p>
 
