--- a/press/index.html
+++ b/press/index.html
@@ -72,7 +72,12 @@
 <hr>
 <ul>
 
+
+
 <li><strong>Deutsche Welle</strong>. <a href="https://www.dw.com/es/civiles-y-ffaa-en-chile-la-lucha-por-superar-la-dictadura/a-66748430">Civiles y FF.AA. en Chile: la lucha por superar la dictadura.</a> 11 September, 2023.</li>
+
+<li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/agencias/chile-recuerda-los-50-anos-del-golpe-militar-de-pinochet-con-heridas-abiertas-y-sin-consenso-nid11092023/
+">Chile recuerda los 50 años del golpe militar de Pinochet con heridas abiertas y sin consenso.</a> 11 September, 2023.</li>
 
 <li><strong>Americas Quarterly</strong>. <a href="https://americasquarterly.org/article/a-last-hope-for-chiles-new-constitution/">A Last Hope for Chile’s New Constitution?.</a> 11 August, 2023.</li>
 
