--- a/columns/index.html
+++ b/columns/index.html
@@ -74,6 +74,10 @@
 <h2 id="las-ltimas-noticias">Las Últimas Noticias</h2>
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <ul>
+<li>20230922 - Sentido común</li>
+<li>20230915 - Dos derechas</li>
+<li>20230912 - El doce</li>
+<li>20230908 - El eterno retorno</li>
 <li>20230817 - Un leve ajuste</li>
 <li>20230802 - El borrador</li>
 <li>20230728 - El retroceso</li>
@@ -351,7 +355,13 @@
 <h2 id="ex-ante">Ex-Ante</h2>
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <ul>
-
+<li>20230922 - La intencionalidad del fracaso constitucional</li>
+<li>20230915 - El tono del senado</li>
+<li>20230911 - Un discurso cojo</li>
+<li>20230908 - El gran fiasco</li>
+<li>20230901 - La cuenta de la electricidad</li>
+<li>20230825 - La trinchera, lo absurdo y los cincuenta años</li>
+<li>20230818 - El Apparátchik</li>
 <li>20230804 - Realismo con renuncia</li>
 <li>20230729 - El legado</li>
 <li>20230722 - Incompetencia política y el comodín de los cincuenta años</li>
