--- a/press/index.html
+++ b/press/index.html
@@ -74,6 +74,8 @@
 
 
 
+<li><strong>El Periodico</strong>. <a href="https://www.elperiodico.com/es/internacional/20230927/proceso-constituyente-chile-nuevo-naufragio-92599383">El proceso constituyente de Chile se acerca a un nuevo horizonte de naufragio.</a>26 September, 2023.</li>
+
 <li><strong>Deutsche Welle</strong>. <a href="https://www.dw.com/es/civiles-y-ffaa-en-chile-la-lucha-por-superar-la-dictadura/a-66748430">Civiles y FF.AA. en Chile: la lucha por superar la dictadura.</a> 11 September, 2023.</li>
 
 <li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/agencias/chile-recuerda-los-50-anos-del-golpe-militar-de-pinochet-con-heridas-abiertas-y-sin-consenso-nid11092023/
