--- a/covers/index.html
+++ b/covers/index.html
@@ -137,6 +137,19 @@ gap: 5px;
 </div>
 
 
+
+<div class="parent">
+<div>
+    <img src="/img/20231017%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20231017%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20231017%20-%20La%20Segunda.png">
+</div>
+</div>
+
 <div class="parent">
 <div>
     <img src="/img/20230720%20-%20La%20Segunda.png"> 
