--- a/covers/index.html
+++ b/covers/index.html
@@ -146,7 +146,7 @@ gap: 5px;
     <img src="/img/20231017%20-%20La%20Segunda.png"> 
   </div>
   <div>
-    <img src="/img/20231017%20-%20La%20Segunda.png">
+    <img src="/img/20231013%20-%20La%20Segunda.jpg">
 </div>
 </div>
 
