--- a/covers/index.html
+++ b/covers/index.html
@@ -152,7 +152,7 @@ gap: 5px;
 
 <div class="parent">
 <div>
-    <img src="/img/20231013%20-%20La%20Segunda.jpg">
+    <img src="/img/20230718%20-%20La%20Segunda.png"> 
   </div>
   <div>
     <img src="/img/20230718%20-%20La%20Segunda.png"> 
@@ -165,7 +165,7 @@ gap: 5px;
 
 <div class="parent">
 <div>
-    <img src="/img/20230504%20-%20La%20Segunda.jpg">
+    <img src="/img/20230504%20-%20La%20Segunda.png">
   </div>
   <div>
     <img src="/img/20230508%20-%20La%20Segunda.png"> 
