--- a/covers/index.html
+++ b/covers/index.html
@@ -143,7 +143,7 @@ gap: 5px;
     <img src="/img/20231017%20-%20La%20Segunda.png"> 
   </div>
   <div>
-    <img src="/img/20231017%20-%20La%20Segunda.png"> 
+    <img src="/img/20230504%20-%20La%20Segunda.png"> 
   </div>
   <div>
     <img src="/img/20231013%20-%20La%20Segunda.jpg">
@@ -152,7 +152,7 @@ gap: 5px;
 
 <div class="parent">
 <div>
-    <img src="/img/20230718%20-%20La%20Segunda.png"> 
+    <img src="/img/20231013%20-%20La%20Segunda.jpg"> 
   </div>
   <div>
     <img src="/img/20230718%20-%20La%20Segunda.png"> 
