--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
 
-<p>2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.” <em>Party Politics</em>. (with Gabriel Negretto).
+<p>2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.” <em>Party Politics</em>. (with Gabriel Negretto). <a href="https://doi.org/10.1177/13540688231196111">doi</a></p>
 
 <p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
