--- a/contact/index.html
+++ b/contact/index.html
@@ -63,10 +63,10 @@
 <hr>
 <div id="content">
 <div class="container">
-    <p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
 <hr>
-<h2 id="address">Address</h2>
+<h2 id="address">Politico Tech Global</h2>
 <blockquote>
+<p>Email: <a href="mailto:kbunker@politicotechglobal.com">kbunker@politicotechglobal.com</a></p>
 <p>Politico Tech Global</p>
 <p>Av. Presidente Kennedy 7900</p>
 <p>Vitacura, RM</p>
