--- a/contact/index.html
+++ b/contact/index.html
@@ -63,13 +63,20 @@
 <hr>
 <div id="content">
 <div class="container">
+<h2 id="address">USS</h2>
+<blockquote>
+<p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
+<p>Facultad de Economía y Gobierno</p>
+<p>Distrito 10</p>
+<p>Providencia, RM</p>
+<p>Chile</p>
 <hr>
 <h2 id="address">Tresquintos</h2>
 <blockquote>
 <p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@politicotechglobal.com</a></p>
 <p>Trequintos</p>
-<p>Av. Presidente Kennedy 7900</p>
-<p>Vitacura, RM</p>
+<p>Distrito 10</p>
+<p>Providencia, RM</p>
 <p>Chile</p>
 </blockquote>
 <hr>
