--- a/contact/index.html
+++ b/contact/index.html
@@ -73,7 +73,7 @@
 <hr>
 <h2 id="address">Tresquintos</h2>
 <blockquote>
-<p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@politicotechglobal.com</a></p>
+<p>Email: <a href="mailto:kbunker@tresquintos.cl">kbunker@tresquintos.cl</a></p>
 <p>Trequintos</p>
 <p>Distrito 10</p>
 <p>Providencia, RM</p>
